--- a/index.html
+++ b/index.html
@@ -8,6 +8,40 @@
     <img src="ab67706c0000da845ed52ae23a0c2600ae34c9d5.jpeg" alt="veigh" class="centralizar maior">
     <H1>Veigh, cujo nome completo é Thiago Veigh, é um rapper e trapper brasileiro que teve seu nome conhecido por sua música trap, que se tornou um fenômeno de sucesso, especialmente no Brasil</H1>
 <body>
-    
+    <main>
+<section id=container>
+<article class=”cartao”>
+<div class=”cartao__conteudo”>
+<h3>Programação</h3>
+<div class=”cartao__conteudo__pergunta”>
+quem é o cantor veigh?
+</div>
+<div class=”cartao__conteudo__resposta”>
+Thiago Veigh da Silva, conhecido mononimamente como Veigh, é um rapper, cantor e compositor brasileiro. Ele nasceu em Itapevi, São Paulo, em 12 de setembro de 2001.
+
+Veigh ganhou destaque na cena musical, especialmente no gênero trap. Em 2023, seu álbum "Dos Prédios Deluxe" alcançou recorde de estreia, ficando no top global de streamings. Ele também detém a maior estreia nacional da história do Spotify.
+
+
+</div>
+</div>
+</article>
+<article class=”cartao”>
+<div class=”cartao__conteudo”>
+<h3>Programação</h3>
+<div class=”cartao__conteudo__pergunta”>
+principais musicas?
+</div>
+<div class=”cartao__conteudo__resposta”>
+Novo Balanço
+Engana Dizendo Que Ama 
+Mandraka</div>
+</div>
+</article>
+</section>
+</main>
+
+<footer>
+<p>Site feito por Giovanna fã do veigh, sem fins lucrativos.</p>
+</footer>
 </body>
 </html>
